--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,10 @@ header .menu {
 
 }
 
+.menu li img {
+    filter: drop-shadow(0px 0px rgba(0, 0, 0, 0.5));
+}
+
 p {
     font-size: 1.8rem;
     font-weight: 400;
@@ -501,7 +505,7 @@ section>h2 {
     align-items: center;
     justify-content: space-around;
     width: 130rem;
-    max-width: 90%;
+    max-width: 100%;
     margin: var(--center);
     height: 5rem;
     border-radius: 5rem;
@@ -546,7 +550,7 @@ section>h2 {
     background-color: white;
     font-size: 5rem;
     width: 50rem;
-    max-width: 100%;
+    max-width: 100vw;
     font-style: normal;
     margin-bottom: 5rem;
     border-top-left-radius: 2rem;
@@ -853,8 +857,9 @@ section>h2 {
     color: white;
     margin-bottom: 4rem;
     text-align: center;
-    text-transform: uppercase;
+    text-transform: capitalize;
     width: 60rem;
+    max-width: 100%;
     margin: var(--center);
     font-weight: 800;
     padding-bottom: 2rem;
@@ -867,6 +872,7 @@ section>h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap: 2rem;
 }
 
 #locations .franja {
@@ -904,9 +910,14 @@ section>h2 {
     padding: 2rem;
     border-radius: 3rem;
     flex-basis: 50rem;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
+}
+
+.location .text {
+    width: 100%;
 }
 
 .location iframe {
@@ -934,6 +945,7 @@ section>h2 {
 .location p {
     font-size: 1.4rem;
     color: white;
+    max-width: 100%;
 }
 
 /* CAMPUS  */
@@ -951,8 +963,9 @@ section>h2 {
     color: white;
     margin-bottom: 4rem;
     text-align: center;
-    text-transform: uppercase;
+    text-transform: capitalize;
     width: 60rem;
+    max-width: 100%;
     margin: var(--center);
     font-weight: 800;
     padding-bottom: 2rem;
@@ -1020,8 +1033,9 @@ section>h2 {
     color: white;
     margin-bottom: 4rem;
     text-align: center;
-    text-transform: uppercase;
+    text-transform: capitalize;
     width: 60rem;
+    max-width: 100%;
     margin: var(--center);
     font-weight: 800;
     margin-bottom: 4rem;
@@ -1314,64 +1328,200 @@ section>h2 {
 
 /* CONTACTO  */
 
-#contacto .container {
-    color: var(--blue);
+#contacto {
+    background-color: #5D58C6;
+    height: 60vh;
+    align-content: center;
+    margin-bottom: 0;
+}
+
+#contacto h1 {
+    font-size: 5rem;
+    color: white;
+    margin-bottom: 4rem;
+    text-align: center;
+    text-transform: capitalize;
+    width: 60rem;
+    max-width: 100%;
+    margin: var(--center);
+    font-weight: 800;
+    margin-bottom: 4rem;
+    border-bottom: 2px solid white;
+}
+
+#contacto>.button {
+    width: 30rem;
+    height: 5rem;
+    margin: var(--center);
+    margin-top: 5rem;
+    color: #5D58C6;
+}
+
+#contacto-info {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+}
+
+#contacto-info .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
+    gap: 2rem;
+    row-gap: 10rem;
+    justify-content: center;
 }
 
-#contacto .container .left,
-#contacto .container .right {
+#contacto-info .container .campus {
+    border-radius: 2rem;
+    padding: 4rem;
+    background-color: #5D58C6;
+    color: white;
     flex-basis: 50rem;
-    flex-grow: 1;
+    max-width: 100%;
 }
 
-#contacto .container .left {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
+#contacto-info h3 {
+    font-size: 2.2rem;
+    text-align: center;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid;
 }
 
-#contacto form {
+#contacto-info p {
+    font-size: 1.6rem;
+    text-align: center;
+    margin: 1rem 0;
+}
+
+
+#formulario-contacto h2 {
+    text-align: center;
+}
+
+#formulario-contacto>p {
+    font-size: 2.2rem;
+    color: #5D58C6;
+    text-align: center;
+    padding-bottom: 4rem;
+    border-bottom: 1px solid;
+}
+
+form {
+    width: var(--width);
+    margin: var(--center);
+    margin-top: 10rem;
+}
+
+form .datos {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
 }
 
-#contacto input,
-#contacto textarea {
+input,
+textarea,
+select {
     border: none;
     outline: none;
-    border-bottom: 2px solid #00000080;
+    background: #5D58C61A;
+    border-radius: 3rem;
+    color: #5D58C6;
+    font-size: 1.6rem;
 }
 
-#contacto input {
+input,
+select {
+    text-indent: 1rem;
     height: 5rem;
-    flex-basis: 25rem;
+    flex-basis: 40rem;
     flex-grow: 1;
 }
 
-#contacto textarea {
+textarea {
     flex-basis: 100%;
-    height: 10rem;
+    width: 100%;
+    height: 20rem;
     resize: none;
+    padding: 1rem;
 }
 
-#contacto button {
+button {
     border: none;
     cursor: pointer;
 }
 
-#contacto ::placeholder {
-    font-size: 1.6rem;
-    font-family: 'Gotham';
+form .button {
+    width: 20rem;
+    border-radius: 3rem;
 }
 
-#contacto .container .right iframe {
-    width: 100%;
-    height: 100%;
-    min-height: 50rem;
+::placeholder,
+option {
+    font-size: 1.6rem;
+    font-family: sans-serif;
+    color: #5D58C6;
+    text-align: center;
+}
+
+.no-spinners::-webkit-inner-spin-button,
+.no-spinners::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.no-spinners {
+    -moz-appearance: textfield;
+}
+
+form p {
+    text-align: center;
+    color: #5D58C6;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid;
+    font-size: 2.2rem;
+    margin-bottom: 5rem;
+}
+
+form p.nb {
+    border: none;
+}
+
+.medio-contacto,
+.cita {
+    margin: var(--center);
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    width: 70rem;
+    max-width: 100%;
+}
+
+.radio-opt {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+
+.radio-opt input {
+    height: 2rem;
+    flex-basis: 2rem;
+    flex-grow: 0;
+}
+
+.radio-opt label {
+    font-size: 1.6rem;
+    color: #5D58C6;
+}
+
+.form-bottom {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 2rem;
+    margin-top: 5rem;
+}
+
+.form-bottom a {
+    text-decoration: underline;
+    font-size: 1.6rem;
 }
 
 /* CONTACTO  */
@@ -1395,6 +1545,7 @@ footer .top {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    row-gap: 2rem;
 }
 
 footer h3 {
@@ -1551,28 +1702,36 @@ footer .bottom p {
         font-size: 3.5rem;
     }
 
+    #hero h2 {
+        font-size: 2rem !important;
+    }
+
     #hero p {
         font-size: 1.8rem;
     }
 
+    .banner-hero {
+        flex-wrap: wrap;
+        border-radius: 0;
+        padding: 2rem 1rem;
+        height: fit-content;
+        row-gap: 1rem;
+    }
+
+    .banner1 {
+        margin-bottom: 10rem;
+    }
+
+    .banner1 .franja {
+        height: 100%;
+    }
+
+    .banner-hero a {
+        font-size: 1.4rem;
+    }
+
     h1 {
         font-size: 6rem;
-    }
-
-    summary {
-        font-size: 2rem;
-        gap: 1rem;
-    }
-
-    summary span {
-        width: 3rem;
-        height: 3rem;
-        min-width: 3rem;
-        min-height: 3rem;
-    }
-
-    summary span i {
-        font-size: 1.4rem;
     }
 
     h2 {
@@ -1581,10 +1740,6 @@ footer .bottom p {
 
     #servicios .servicio {
         flex-grow: 1;
-    }
-
-    #slider-especiales .cover {
-        display: none;
     }
 
     .banner2 figure {
@@ -1598,10 +1753,12 @@ footer .bottom p {
         border-radius: 0.5rem;
     }
 
-
-
     footer {
         padding-bottom: 1rem;
+    }
+
+    #contacto-info .container .campus {
+        padding: 2rem 1rem;
     }
 
 }
